Update the screenshots

--- a/billing/templates/billing/billing.html
+++ b/billing/templates/billing/billing.html
@@ -30,7 +30,8 @@
                         {{ form.customer_email }}
                     </div>
                     <div class="mb-3">
-                        <h5>Products</h5>
+                        <h5 class="mb-1">Products</h5>
+                        <small class="text-muted">* Electronic Products (e.g., Fan, AC, Bulb)</small>                        
                         <div id="product-container">
                             <div class="product-row" data-index="0">
                                 <div class="row">
